WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262800
AX: accessibilityIsIgnored cache is not enabled at updateChildrenForObjects level
https://bugs.webkit.org/show_bug.cgi?id=262800
Summary
AX: accessibilityIsIgnored cache is not enabled at updateChildrenForObjects l...
Joshua Hoffman
Reported
2023-10-06 11:18:14 PDT
The cache used for accessibilityIsIgnored is enabled at the updateChildren scope, but should also be at the updateChildrenForObjects level to save on unnecessary accessibilityIsIgnored computations.
Attachments
Patch
(1.62 KB, patch)
2023-10-06 11:27 PDT
,
Joshua Hoffman
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-06 11:18:30 PDT
<
rdar://problem/116589024
>
Joshua Hoffman
Comment 2
2023-10-06 11:27:08 PDT
Created
attachment 468094
[details]
Patch
EWS
Comment 3
2023-10-07 10:50:10 PDT
Committed
269042@main
(c6e3790b95dc): <
https://commits.webkit.org/269042@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 468094
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug