AX: accessibilityIsIgnored cache is not enabled at updateChildrenForObjects level https://bugs.webkit.org/show_bug.cgi?id=262800 rdar://problem/116589024

Reviewed by Tyler Wilcock.

We utilize the AXComputedObjectAttributeCache to cache the isIgnored value of objects
across certain scopes. Right now, it is enabled in the scope of
AXIsolatedTree::updateChildren.

This patch enables the cache in AXIsolatedTree::updateChildrenForObjects, allowing all
of the appends downstream to take advantage of the caching. In testing, this can save
up to 20% of samples of accessibilityIsIgnored.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateChildrenForObjects):

Canonical link: https://commits.webkit.org/269042@main